--- a/css/style.css
+++ b/css/style.css
@@ -73,10 +73,10 @@ ul li{
     background: #FFF;
 }
 .header .logo{
-	width: 20%;
+	width: 18%;
 	display: table;
 	margin: 0 auto;
-	padding: 20px 0px;
+	padding: 19px 0px;
 }
 .header .logo img{
 	width: 100%;
@@ -94,10 +94,13 @@ ul li{
 .md-mobile{
 	display: none;
 }
+
 .main-page .left-content{
 	float: left;
-	width: 55%;
+	width: 56%;
 	position: relative;
+	/*margin-left: 5%;*/
+
 }
 /*.main-page .left-content:hover .md-popup-1{
 	opacity: 0;
@@ -105,6 +108,13 @@ ul li{
 .hover{
 	opacity: 0;
 	transition-duration: 0.5s;
+}
+.main-page{
+	/*position: fixed;
+	left: 0%;
+	top: 14%;
+	width: 100%;
+	height: 100%;*/
 }
 .main-page .left-content .md-popup-0:hover img{
 	opacity: 1 !important;
@@ -116,9 +126,18 @@ ul li{
 	transition-duration: 0.5s;
 	transform: scale(1.1);
 }
+.main-page .left-content .md-popup-0:hover .img-light{
+	opacity: 1;
+	transition-delay: 0.2s;
+}
+.main-page .left-content .md-popup-1:hover .img-light{
+	opacity: 1;
+	transition-delay: 0.2s;
+}
+
 .main-page .right-content{
 	float: left;
-	width: 45%;
+	width: 44%;
 }
 .main-page .left-content img{
 	width: 100%;
@@ -129,12 +148,19 @@ ul li{
 .main-page .right-content img{
 	width: 100%
 }
+.main-page .left-content .img-light{
+	position: absolute;
+	left: -23%;
+    bottom: -3%;
+	width: 80%;
+	opacity: 0;
+}
 .main-page .left-content .md-popup-1{
 	position: absolute;
 	z-index: 2;
 	cursor: pointer;
-	left: 46%;
-    top: 34.5%;
+    left: 45.5%;
+    top: 40.5%;
     width: 8.5%;
 }
 .main-page .left-content .md-popup-2{
@@ -142,7 +168,7 @@ ul li{
 	z-index: 2;
 	cursor: pointer;
 	left: 27.5%;
-    top: 34.5%;
+    top: 40.5%;
     width: 8.5%;
 }
 .main-page .left-content .md-popup-3{
@@ -150,31 +176,31 @@ ul li{
 	z-index: 2;
 	cursor: pointer;
 	left: 36.5%;
-    top: 34.5%;
+    top: 40.5%;
     width: 8.5%;
 }
 .main-page .left-content .md-popup-4{
 	position: absolute;
 	z-index: 2;
 	cursor: pointer;
-	left: 55.5%;
-    top: 34.5%;
+	left: 54.5%;
+    top: 40.5%;
     width: 8.5%;
 }
 .main-page .left-content .md-popup-5{
 	position: absolute;
 	z-index: 2;
 	cursor: pointer;
-	left: 46%;
-    top: 19.5%;
+    left: 45.5%;
+    top: 27%;
     width: 8.5%;
 }
 .main-page .left-content .md-popup-6{
 	position: absolute;
 	z-index: 2;
 	cursor: pointer;
-	left: 55.5%;
-    top: 19.5%;
+    left: 54.5%;
+    top: 27%;
     width: 8.5%;
 }
 .main-page .left-content .md-popup-7{
@@ -182,7 +208,7 @@ ul li{
 	z-index: 2;
 	cursor: pointer;
 	left: 27.5%;
-    top: 48.5%;
+    top: 53%;
     width: 8.5%;
 }
 .main-page .left-content .md-popup-8{
@@ -190,23 +216,23 @@ ul li{
 	z-index: 2;
 	cursor: pointer;
 	left: 36.5%;
-    top: 48.5%;
+    top: 53%;
     width: 8.5%;
 }
 .main-page .left-content .md-popup-9{
 	position: absolute;
 	z-index: 2;
 	cursor: pointer;
-	left: 46%;
-    top: 48.5%;
+	left: 45.5%;
+    top: 53%;
     width: 8.5%;
 }
 .main-page .left-content .md-popup-10{
 	position: absolute;
 	z-index: 2;
 	cursor: pointer;
-    left: 55.5%;
-    top: 48.5%;
+    left: 54.5%;
+    top: 53%;
     width: 8.5%;
 }
 .main-page .left-content .md-popup-11{
@@ -214,23 +240,23 @@ ul li{
 	z-index: 2;
 	cursor: pointer;
 	left: 36.5%;
-    top: 63.5%;
+    top: 66.5%;
     width: 8.5%;
 }
 .main-page .left-content .md-popup-12{
 	position: absolute;
 	z-index: 2;
 	cursor: pointer;
-	left: 46%;
-    top: 63.5%;
+	left: 45.5%;
+    top: 66.5%;
     width: 8.5%;
 }
 .main-page .left-content .md-popup-13{
 	position: absolute;
 	z-index: 2;
 	cursor: pointer;
-	left: 55.5%;
-    top: 63.5%;
+	left: 54.5%;
+    top: 66.5%;
     width: 8.5%;
 }
 .main-page .left-content .md-popup-0 img{
@@ -241,7 +267,7 @@ ul li{
 .main-page .left-content .md-text{
 	position: absolute;
     left: 27%;
-    top: 50%;
+    top: 55%;
     width: 49%;
     z-index: 1;
     animation: md_opacity infinite 5s;
@@ -281,8 +307,8 @@ ul li{
 	top: 0;
 	width: 100%;
 	height: 100%;
-	background: #000;
-	opacity: 0;
+/*	background: #000;*/
+	opacity: 0.7;
 }
 .main-page .right-content{
 	position: relative;
@@ -300,15 +326,30 @@ ul li{
     z-index: 2;
 }
 .md-answer{
-   width: 28%;
-    height: 75%;
-    left: 25%;
+   width: 100%;
+    height: 100%;
+    left: 0%;
     top: 7%;
-    min-width: 360px;
     display: none;
     padding: 44px 20px;
+    color: #000;
+    background: url(../images/bg-popup.jpg) no-repeat, #f9fafc;
+    background-size: auto 100%;
 }
 .md-answer .md-content{
+	text-align: center;
+	text-transform: uppercase;
+	position: absolute;
+   	right: 10%;
+    top: 50%;
+    transform: translateY( -50%);
+    width: 28%;
+    background: #FFF;
+    height: 75%;
+    min-width: 360px;
+    z-index: 9999;
+}
+.md-answer .md-content .main-content{
 	text-align: center;
 	text-transform: uppercase;
 	position: absolute;
@@ -350,7 +391,19 @@ ul li{
 .ui.checkbox input.hidden+label{
 	font-size: 16px;
 	 font-family: "ElleFutura-Medium";
+	 line-height: 1.4;
 }
+.ui.radio.checkbox .box:before, .ui.radio.checkbox label:before{
+	top: 4px;
+}
+.ui.radio.checkbox .box:after, .ui.radio.checkbox label:after{
+	top: 4px;
+}
+.fancybox-slide--html{
+	padding: 0px;
+	overflow: hidden;
+}
+
 .md-answer .md-content input{
 	font-family: "SFUFuturaHeavy";
 	text-transform: uppercase;
@@ -371,11 +424,17 @@ ul li{
 	position: relative;
 }
 .md-wrong .md-content{
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%,-50%);
-	width: 80%;
+	text-align: center;
+    text-transform: uppercase;
+    position: absolute;
+    right: 10%;
+    top: 50%;
+    transform: translateY( -50%);
+    width: 28%;
+    background: #FFF;
+    height: 75%;
+    min-width: 360px;
+    z-index: 9999;
 }
 .md-wrong .md-content a{
 	font-family: "SFUFuturaHeavy";
@@ -518,6 +577,10 @@ ul li{
 .md-scanqr .md-content p span{
 	font-family: "ElleFutura-Bold";
 	text-transform: uppercase;
+	
+}
+.md-scanqr .md-content p.md-text-1 span{
+	display: block;
 }
 .md-scanqr .md-content p.md-text-2{
 	text-transform: uppercase;
@@ -535,6 +598,9 @@ ul li{
 }
 .fancybox-slide--html .md-scanqr .fancybox-close-small{
 	display: block !important;
+	top: 12.5%;
+	right: 10%;
+	z-index: 99999999;
 }
 .fancybox-slide--html .md-close-popup{
 	display: block !important;
@@ -545,9 +611,168 @@ ul li{
     margin: 0 auto;
 }
 .fancybox-is-open .fancybox-bg{
-	background: url(../images/bg-popup.jpg) no-repeat;
-	background-size: cover;
-	opacity: 1;
+	opacity: 0.7;
+}
+.md-answer .bg-op-5{
+	position: absolute;
+	left: 0%;
+	top: 0%;
+	width: 100%;
+	height: 100%;
+	background: #000;
+	opacity: 0.3;
+	animation: opacit_1 3s ease-in;
+}
+@keyframes opacit_1{
+	0%{
+		opacity: 0.7;
+	}
+	100%{
+		opacity: 0.3;
+	}
+}
+.active-opacity{
+	animation: opacit_2 3s ease-in !important;
+	opacity: 0 !important;
+}
+@keyframes opacit_2{
+	0%{
+		opacity: 0.3;
+	}
+	100%{
+		opacity: 0;
+	}
+}
+.md-wrong .bg-op-6{
+	position: absolute;
+	left: 0%;
+	top: 0%;
+	width: 100%;
+	height: 100%;
+	background: #000;
+	opacity: 0.7;
+}
+
+.md-answer .md-img-popup-1{
+	position: absolute;
+	opacity: 0.8;
+    z-index: 2;
+    cursor: pointer;
+    left: 344px;
+    top: 40.5%;
+    width: 65.8px;
+}
+.md-answer .md-img-popup-2{
+	position: absolute;
+	opacity: 0.8;
+    z-index: 2;
+    cursor: pointer;
+    left: 205px;
+    top: 40.5%;
+    width: 65.8px;
+}
+.md-answer .md-img-popup-3{
+	position: absolute;
+	opacity: 0.8;
+    z-index: 2;
+    cursor: pointer;
+    left: 272px;
+    top: 40.5%;
+    width: 65.8px;
+}
+.md-answer .md-img-popup-4{
+	position: absolute;
+	opacity: 0.8;
+    z-index: 2;
+    cursor: pointer;
+    left: 412px;
+    top: 40.5%;
+    width: 65.8px;
+}
+.md-answer .md-img-popup-5{
+	position: absolute;
+	opacity: 0.8;
+    z-index: 2;
+    cursor: pointer;
+    left: 344px;
+    top: 27.5%;
+    width: 65.8px;
+}
+.md-answer .md-img-popup-6{
+	position: absolute;
+	opacity: 0.8;
+    z-index: 2;
+    cursor: pointer;
+    left: 412px;
+    top: 27.5%;
+    width: 65.8px;
+}
+.md-answer .md-img-popup-7{
+	position: absolute;
+	opacity: 0.8;
+    z-index: 2;
+    cursor: pointer;
+    left: 205px;
+    top: 53.5%;
+    width: 65.8px;
+}
+.md-answer .md-img-popup-8{
+	position: absolute;
+	opacity: 0.8;
+    z-index: 2;
+    cursor: pointer;
+    left: 272px;
+    top: 53.5%;
+    width: 65.8px;
+}
+.md-answer .md-img-popup-9{
+	position: absolute;
+	opacity: 0.8;
+    z-index: 2;
+    cursor: pointer;
+    left: 344px;
+    top: 53.5%;
+    width: 65.8px;
+}
+.md-answer .md-img-popup-10{
+	position: absolute;
+	opacity: 0.8;
+    z-index: 2;
+    cursor: pointer;
+    left: 412px;
+    top: 53.5%;
+    width: 65.8px;
+}
+.md-answer .md-img-popup-11{
+	position: absolute;
+	opacity: 0.8;
+    z-index: 2;
+    cursor: pointer;
+    left: 272px;
+    top: 66.5%;
+    width: 65.8px;
+}
+.md-answer .md-img-popup-12{
+	position: absolute;
+	opacity: 0.8;
+    z-index: 2;
+    cursor: pointer;
+    left: 344px;
+    top: 66.5%;
+    width: 65.8px;
+}
+.md-answer .md-img-popup-13{
+	position: absolute;
+	opacity: 0.8;
+    z-index: 2;
+    cursor: pointer;
+    left: 412px;
+    top: 66.5%;
+    width: 65.8px;
+}
+.md-wrong{
+	background: url(../images/bg-popup-1.jpg) no-repeat, #f9fafc;
+	background-size: auto 100%;
 }
 .compensate-for-scrollbar{
 	margin-right: 0px !important;
@@ -691,14 +916,24 @@ ul li{
 		left: auto;
 		top: 7%;
 		min-width: auto;
+		background: #FFF;
 	}
 	.md-answer .md-content{
-		width: 90%;
-	}
-	.md-scanqr .md-content{
-		position: static;
 		width: 100%;
-		transform: translate(0,0);
+	}
+	
+	.md-answer .bg-op-5{
+		display: none;	
+	}
+	.md-wrong .bg-op-6{
+		display: none;
+	}
+	.md-answer .md-content{
+		left: 50%;
+		right: auto;
+		transform: translate(-50%,-50%);
+		height: 100%;
+		min-width: auto;
 	}
 	.md-answer .md-content h6{
 		font-size: 20px;
@@ -712,6 +947,9 @@ ul li{
 	.md-answer .md-content input{
 		font-size: 16px;
 	}
+	.md-answer .md-img-popup-0{
+		display: none;
+	}
 	.md-scanqr .md-content p{
 		font-size: 16px;
 	}
@@ -723,7 +961,7 @@ ul li{
 		width: 90%;
 	}
 	.md-correct .md-content .md-right-content img{
-		width: 60%;
+		width: 80%;
 		display: table;
 		margin: 0 auto;
 	}
@@ -779,11 +1017,31 @@ ul li{
 	.md-wrong .md-content h6{
 		font-size: 25px;
 	}
+	.md-wrong .md-content{
+		height: auto;
+	}
 	.md-wrong .md-content span{
 		font-size: 16px;
 	}
 	.md-wrong .md-content a{
 		font-size: 16px;
+	}
+	.md-scanqr .md-content{
+		position: static;
+		width: 100%;
+		transform: translate(0,0);
+		height: auto;
+
+	}
+	.md-scanqr .md-content .main-content{
+		position: static;
+		width: 100%;
+		transform: translate(0,0);
+		height: auto;
+	}
+	.fancybox-slide--html .md-scanqr .fancybox-close-small{
+		top: 0%;
+		right: 0%;
 	}
 }
 @media (max-width: 520px){
@@ -824,4 +1082,212 @@ ul li{
 .scroll-top{
 	top: -120px;
 	position: fixed;
+}
+@media screen and (min-height: 900px){
+	.md-answer{
+		/*height: auto;*/
+		top: 0%;
+	}
+}
+@media screen and (min-width: 768px){
+	/*.md-answer{
+		height: 75% !important;
+		top: 7%;
+	}*/
+}
+@media screen and (max-width: 420px){
+	.md-answer{
+		height: 75% !important;
+		top: 5%;
+	}
+}
+@media screen and (min-width: 1600px){
+	.md-correct .md-content .md-right-content img{
+		max-width: 500px;
+	}
+	.md-correct .md-content .md-left-content h6{
+		font-size: 30px;
+		margin-bottom: 30px;
+	}
+	.md-correct .md-content .md-left-content .md-col label{
+		font-size: 20px;
+	}
+	.md-correct .md-content .md-left-content span{
+		font-size: 20px;
+	}
+	.md-correct .md-content .md-left-content .md-col input{
+		height: 40px;
+	    padding: 0px 15px;
+	}
+	.md-correct .md-content .md-left-content .ui.selection.dropdown{
+		height: 40px;
+		padding: 12px 15px;
+	}
+	.ui.checkbox input.hidden+label{
+		font-size: 20px;
+	}
+	.md-correct .md-content .md-left-content input[type='button']{
+		font-size: 20px;
+		padding: 10px 25px;
+	}
+	.md-correct .md-content .md-left-content .md-col{
+		margin-bottom: 20px;
+	}
+	.md-correct{
+		height: auto;
+		top: 0%;
+	}
+	.md-answer .md-content h6{
+		font-size: calc(5px + 1.5vw);
+	}
+	.md-answer .md-content .ui.form .grouped.fields>label{
+		font-size: calc(3px + 1vw);
+		line-height: normal;
+	}
+	.md-answer .ui.checkbox input.hidden+label{
+		font-size: calc(3px + 1vw);
+	}
+	.md-answer .md-content input{
+		font-size: calc(3px + 1vw);
+	}
+	.md-answer .md-content h6{
+		margin-bottom: 20px;
+	}
+	.md-wrong .md-content span{
+		font-size: calc(3px + 1vw);
+		margin-bottom: 20px;
+	}
+	.md-wrong .md-content a{
+		font-size: calc(3px + 1vw);
+		padding: 10px 25px;
+	}
+	.ui.radio.checkbox .box:before, .ui.radio.checkbox label:before{
+		width: 25px;
+		height: 25px;
+		top: 10px;
+	}
+	.ui.radio.checkbox .box:after, .ui.radio.checkbox label:after{
+		width: 25px;
+		height: 25px;
+		top: 10px;
+	}
+}
+@media screen and (min-width: 2000px), and (min-height: 1440px){
+		.md-answer .md-img-popup-1{
+			position: absolute;
+			opacity: 0.8;
+		    z-index: 2;
+		    cursor: pointer;
+		    left: 674px;
+	        top: 40.5%;
+	        width: 125px;
+		}
+		.md-answer .md-img-popup-2{
+			position: absolute;
+			opacity: 0.8;
+		    z-index: 2;
+		    cursor: pointer;
+		    left: 405px;
+		    top: 40.5%;
+		    width: 125px;
+		}
+		.md-answer .md-img-popup-3{
+			position: absolute;
+			opacity: 0.8;
+		    z-index: 2;
+		    cursor: pointer;
+		    left: 535px;
+		    top: 40.5%;
+		    width: 125px;
+		}
+		.md-answer .md-img-popup-4{
+			position: absolute;
+			opacity: 0.8;
+		    z-index: 2;
+		    cursor: pointer;
+		    left: 802px;
+		    top: 40.5%;
+		    width: 125px;
+		}
+		.md-answer .md-img-popup-5{
+			position: absolute;
+			opacity: 0.8;
+		    z-index: 2;
+		    cursor: pointer;
+		    left: 674px;
+	        top: 27.5%;
+	        width: 125px;
+		}
+		.md-answer .md-img-popup-6{
+			position: absolute;
+			opacity: 0.8;
+		    z-index: 2;
+		    cursor: pointer;
+		    left: 802px;
+		    top: 27.5%;
+		    width: 125px;
+		}
+		.md-answer .md-img-popup-7{
+			position: absolute;
+			opacity: 0.8;
+		    z-index: 2;
+		    cursor: pointer;
+		    left: 405px;
+		    top: 53.5%;
+		    width: 125px;
+		}
+		.md-answer .md-img-popup-8{
+			position: absolute;
+			opacity: 0.8;
+		    z-index: 2;
+		    cursor: pointer;
+		    left: 535px;
+		    top: 53.5%;
+		    width: 125px;
+		}
+		.md-answer .md-img-popup-9{
+			position: absolute;
+			opacity: 0.8;
+		    z-index: 2;
+		    cursor: pointer;
+		    left: 674px;
+		    top: 53.5%;
+		    width: 125px;
+		}
+		.md-answer .md-img-popup-10{
+			position: absolute;
+			opacity: 0.8;
+		    z-index: 2;
+		    cursor: pointer;
+		    left: 802px;
+		    top: 53.5%;
+		    width: 125px;
+		}
+		.md-answer .md-img-popup-11{
+			position: absolute;
+			opacity: 0.8;
+		    z-index: 2;
+		    cursor: pointer;
+		    left: 535px;
+		    top: 66.5%;
+		    width: 125px;
+		}
+		.md-answer .md-img-popup-12{
+			position: absolute;
+			opacity: 0.8;
+		    z-index: 2;
+		    cursor: pointer;
+		    left: 674px;
+		    top: 66.5%;
+		    width: 125px;
+		}
+		.md-answer .md-img-popup-13{
+			position: absolute;
+			opacity: 0.8;
+		    z-index: 2;
+		    cursor: pointer;
+		    left: 802px;
+		    top: 66.5%;
+		    width: 125px;
+		}
 }
